<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:weightSum="1">


    <Button
        android:id="@+id/scan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Scan" />

    <Button
        android:id="@+id/inbox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Inbox" />
    <TextView
        android:id="@+id/text0"
        android:layout_width="354dp"
        android:layout_height="21dp"
        android:layout_gravity="center"
        android:layout_weight="0.11"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="354dp"
        android:layout_height="21dp"
        android:layout_gravity="center"
        android:layout_weight="0.11"
        android:text="Welcome"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/help"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.67"
        android:textSize="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/profile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Profile"
            android:textSize="18dp" />

        <Button
            android:id="@+id/logout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Logout"
            android:textSize="18dp" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>