<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:weightSum="1">


    <Button
        android:id="@+id/favourite"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:text="Add to Favourite"
        android:visibility="invisible" />

    <Button
        android:id="@+id/message"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Message"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/text0"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_weight="0.05"
        android:textSize="24dp" />
    <TextView
        android:id="@+id/text1"
        android:layout_width="300dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_weight="0.11"
        android:text="Welcome"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="300dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_weight="0.11"
        android:text="Welcome"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="300dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_weight="0.11"
        android:text="Welcome"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="300dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_weight="0.11"
        android:text="Welcome"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="300dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_weight="0.11"
        android:text="Welcome"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="300dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_weight="0.11"
        android:text="Welcome"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/text7"
        android:layout_width="300dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_weight="0.11"
        android:textSize="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/request"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="REQUEST"
            android:textSize="18dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/accept"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="ACCEPT"
            android:textSize="18dp"
            android:visibility="invisible" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>